manifests/infrastructure/nginx/fos-service-dvwa.yaml
# fos-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fos-external
  namespace: nginx
spec:
  type: ExternalName
  externalName: fos.fos-dev.svc.cluster.local
