manifests/infrastructure/nginx/nginx-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-to-fos
  namespace: fos
spec:
  ingressClassName: nginx-internal
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          service:
            name: fos
            port:
              number: 8001
        path: /
        pathType: Prefix
